web-kubernetes/files/kubernetes/deployment-linux-doc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2023-06-01T01:53:39Z"
  generation: 1
  labels:
    app: linux-doc
  name: linux-doc
  namespace: default
  resourceVersion: "8463"
  uid: 5904a347-061c-4412-af43-74fd250305f9
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: linux-doc
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: linux-doc
    spec:
      containers:
      - image: docker.io/erick954/linux-doc:latest
        imagePullPolicy: Always
        name: linux-doc
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-06-01T01:53:55Z"
    lastUpdateTime: "2023-06-01T01:53:55Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-06-01T01:53:39Z"
    lastUpdateTime: "2023-06-01T01:53:55Z"
    message: ReplicaSet "linux-doc-55845bc798" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
