web-kubernetes/files/kubernetes/deployment-root-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  creationTimestamp: "2023-06-01T00:56:26Z"
  generation: 4
  labels:
    app: root-nginx
  name: root-nginx
  namespace: default
  resourceVersion: "10699"
  uid: 433d571c-92da-4c18-a2bd-8b012bdc1745
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: root-nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: root-nginx
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html/.well-known
          name: acme-challenge
        - mountPath: /usr/share/nginx/html/index.html
          name: index-equipo-aar-atdi-bme-daav-lmam
          subPath: index.html
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /var/www/html/.well-known
          type: ""
        name: acme-challenge
      - configMap:
          defaultMode: 420
          name: index-equipo-aar-atdi-bme-daav-lmam
        name: index-equipo-aar-atdi-bme-daav-lmam
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-06-01T00:56:42Z"
    lastUpdateTime: "2023-06-01T00:56:42Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-06-01T00:56:26Z"
    lastUpdateTime: "2023-06-01T03:15:54Z"
    message: ReplicaSet "root-nginx-5d659695fb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
